# styletts2-ukrainian-openai-tts-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
app/: __main__.py  stress_recovery.py
script/: build_run.cmd  deploy.cmd  deploy_remote.cmd  manual_build.cmd
styletts2-ukrainian-openai-tts-api/: __main__.py
test/: test_stress_recovery.py
