[project]
name = "styletts2-ukrainian-openai-tts-api"
version = "0"
description = ""
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastapi>=0.119.0",
    "gradio-client>=1.13.3",
    "python-dotenv>=1.1.1",
    "soundfile>=0.13.1",
    "uvicorn>=0.37.0",
]

[tool.uv.workspace]
members = ["styletts2-ukrainian"]

[dependency-groups]
dev = [
    "pre-commit-uv>=4.2.0",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
