[project]
name = "styletts2-ukrainian-openai-tts-api"
version = "0"
description = ""
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastapi",
    "gradio-client>=2.0.3",
    "python-dotenv",
    "soundfile>=0.13.1",
    "uvicorn",
]

[tool.uv.workspace]
members = ["styletts2-ukrainian"]

[dependency-groups]
dev = [
    "pre-commit-uv",
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
